2012-08-06  Nat Duca  <nduca@chromium.org>

        [chromium] Expose CCGraphicsContext as WebCompositorOutputSurface
        https://bugs.webkit.org/show_bug.cgi?id=92890

        Reviewed by James Robinson.

        * WebKit.gyp:
        * WebKit.gypi:
        * public/WebSettings.h:
        * public/WebViewClient.h:
        (WebKit):
        (WebViewClient):
        (WebKit::WebViewClient::createOutputSurface):
        * src/WebLayerTreeView.cpp:
        (WebKit::WebLayerTreeView::Settings::operator CCLayerTreeSettings):
        * src/WebLayerTreeViewImpl.cpp:
        (WebKit):
        (WebGraphicsContextToOutputSurfaceAdapter):
        (WebKit::WebGraphicsContextToOutputSurfaceAdapter::WebGraphicsContextToOutputSurfaceAdapter):
        (WebKit::WebLayerTreeViewClientAdapter::WebLayerTreeViewClientAdapter):
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::WebSettingsImpl):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        (WebKit::WebViewImpl::createOutputSurface):
        (WebKit):
        (WebKit::WebViewImpl::didRebindGraphicsContext):
        (WebKit::WebViewImpl::didRecreateOutputSurface):
        * src/WebViewImpl.h:
        (WebViewImpl):
        * tests/CCLayerTreeHostImplTest.cpp:
        * tests/CCLayerTreeHostTest.cpp:
        (WTF):
        (WTF::CCLayerTreeHostTestSetSingleLostContext::didRecreateOutputSurface):
        (WTF::CCLayerTreeHostTestSetRepeatedLostContext::didRecreateOutputSurface):
        * tests/CCResourceProviderTest.cpp:
        (WebKit::CCResourceProviderTest::CCResourceProviderTest):
        * tests/CCTextureUpdateControllerTest.cpp:
        * tests/CCThreadedTest.cpp:
        (WebKitTests::TestHooks::createOutputSurface):
        * tests/CCThreadedTest.h:
        (WebKitTests::TestHooks::didRecreateOutputSurface):
        * tests/Canvas2DLayerBridgeTest.cpp: