@@ -1,3 +1,14 @@
+2012-08-09  Alec Flett  <alecflett@chromium.org>
+
+        IndexedDB: add AssertMatchingEnums for Direction and TaskType
+        https://bugs.webkit.org/show_bug.cgi?id=93618
+
+        Reviewed by Tony Chang.
+
+        These chromium enums were introduced in a separate patch.
+
+        * src/AssertMatchingEnums.cpp:
+
 2012-08-06  Nat Duca  <nduca@chromium.org>
 
         [chromium] Expose CCGraphicsContext as WebCompositorOutputSurface
